# backend

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: dev_deploy_workflow.yml  push_tests.yml  workflow_testing_ssh.yml
apps/authentication/: adapters.py  admin.py  apps.py  providers.py  schema.py  serializers.py  urls.py  utils.py  views.py
apps/core/: admin.py  apps.py  fields.py  managers.py  mixins.py  models.py  paginators.py  permissions.py  utils.py  validators.py  views.py
apps/participants/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/participants/migrations/: 0001_initial.py  0002_auto_20230325_0855.py  0003_auto_20230328_0047.py  0004_auto_20230330_1626.py  0005_accesslevel_vacancy_editing.py  0006_auto_20230521_2107.py
apps/projects/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_auto_20230325_0855.py  (+9 more)
apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
config/: asgi.py  gunicorn.conf.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docs/: poetry.md
infra/: .env.example  docker-compose_dev.yaml  docker-compose_local.yaml
infra/deploy_dev/: docker-compose_dev.yaml  docker_check.service  githance_dev_backend.service  is_docker_up.sh
infra/deploy_local/: .env.local.example  docker-compose_local.yaml
infra/nginx/: default.conf  srv.conf
(+13 files in other folders)
